# suby

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: benchmarks.yml  codspeed.yml  lint.yml  release.yml  tests_and_coverage.yml
suby/: __init__.py  benchmarks.py  callbacks.py  errors.py  process_waiting.py  proxy_module.py  run.py
tests/: conftest.py  test_benchmarks.py
tests/benchmarks/: test_benchmarks.py
tests/documentation/: test_quick_start.py  test_readme.py
tests/typing/: test_editable_install.py  test_typing_run.py
tests/units/: test_api_edge_cases.py  test_benchmarks.py  test_callbacks.py  test_errors.py  test_process_waiting.py  test_proxy_module.py  test_run.py  test_run_directory.py  test_subprocess_result.py
