[build-system]
requires = ["setuptools==68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suby"
version = "0.0.4"
authors = [
  { name="Evgeniy Blinov", email="zheni-b@yandex.ru" },
]
description = 'Slightly simplified subprocesses'
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'emptylog>=0.0.11',
    'cantok>=0.0.32',
]
classifiers = [
    "Operating System :: OS Independent",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Programming Language :: Python :: Free Threading',
    'Programming Language :: Python :: Free Threading :: 3 - Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
]
keywords = [
    'subprocesses',
    'subprocesses wrapper',
    'execute commands',
]

[tool.setuptools.package-data]
"suby" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="suby"
runner="pytest"

[project.urls]
'Source' = 'https://github.com/mutating/suby'
'Tracker' = 'https://github.com/mutating/suby/issues'
