[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "suby"
version = "0.0.9"
authors = [
  { name="Evgeniy Blinov", email="zheni-b@yandex.ru" },
]
description = 'Slightly simplified subprocesses'
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'emptylog>=0.0.12',
    'cantok>=0.0.36',
    'microbenchmark>=0.0.3',
    'sigmatch>=0.0.9',
]
classifiers = [
    "Operating System :: OS Independent",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Programming Language :: Python :: Free Threading',
    'Programming Language :: Python :: Free Threading :: 3 - Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed',
]
keywords = [
    'subprocesses',
    'subprocesses wrapper',
    'execute commands',
]

[tool.mutmut]
paths_to_mutate=["suby"]

[tool.coverage.run]
branch = true
parallel = true
plugins = ["coverage_pyver_pragma"]
source = ["suby"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that create isolated environments, install dependencies, or otherwise take noticeably longer",
]
norecursedirs = ["build", "mutants"]
testpaths = ["tests/documentation", "tests/typing", "tests/units"]

[tool.ruff]
lint.ignore = ['E501', 'E712', 'PTH123', 'PTH118', 'PLR2004', 'PTH107', 'SIM105', 'SIM102', 'RET503', 'PLR0912', 'C901', 'E731', 'F821']
lint.select = ["ERA001", "YTT", "ASYNC", "BLE", "B", "A", "COM", "INP", "PIE", "T20", "PT", "RSE", "RET", "SIM", "SLOT", "TID252", "ARG", "PTH", "I", "C90", "N", "E", "W", "D201", "D202", "D419", "F", "PL", "PLE", "PLR", "PLW", "RUF", "TRY201", "TRY400", "TRY401"]
format.quote-style = "single"

[project.urls]
'Source' = 'https://github.com/mutating/suby'
'Tracker' = 'https://github.com/mutating/suby/issues'
